# bitcraft-chatbridge

./: Cargo.toml
chatbridge/: Cargo.toml
chatbridge/src/: main.rs
src/: glue.rs  main.rs
